# Linux-Quest-Game

./: CHANGELOG.md  CONTRIBUTING.md  README.md  play.sh  pyproject.toml  requirements.txt
src/: __init__.py  main.py
src/core/: __init__.py  achievements.py  audio.py  colors.py  game.py  terminal.py
src/missions/: __init__.py  missions.py
src/simulation/: __init__.py  filesystem.py  shell.py
src/simulation/commands/: __init__.py  base.py  files.py  navigation.py  network.py  sysadmin.py  system.py  text.py
src/ui/: __init__.py  widgets.py
tests/: __init__.py  test_achievements.py  test_filesystem.py  test_missions.py  test_shell.py
