[project]
name = "linux-command-quest"
version = "2.0.0"
description = "Hacknet-style interactive Linux learning game"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ali Bedirhan", email = "contact@alibedirhan.com"}
]
requires-python = ">=3.10"
keywords = ["linux", "terminal", "game", "education", "tutorial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Games/Entertainment",
]

dependencies = []

[project.optional-dependencies]
audio = ["simpleaudio>=1.0.4"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
linux-quest = "src.main:main"

[project.urls]
Homepage = "https://github.com/alibedirhan/linux-command-quest"
Documentation = "https://github.com/alibedirhan/linux-command-quest#readme"
Repository = "https://github.com/alibedirhan/linux-command-quest.git"
YouTube = "https://youtube.com/@ali_bedirhan"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
